# vrender

./: CMakeLists.txt  README.md
src/: device.c  device.h  global_config.h  main.c  validation_layers.c  validation_layers.h
src/renderer/: config.h  config.h.in  device.c  device.h  pipeline.c  pipeline.h  swapchain.c  swapchain.h  validation_layers.c  validation_layers.h  vulkan_context.c  vulkan_context.h
src/vulkan/: device.c  swap_chain.c  swap_chain.h
